--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,3 +69,13 @@ test = true
 name = "day5"
 harness = false
 path = "src/bin/day5/bench.rs"
+
+[[bin]]
+name = "day6"
+bench = false
+test = true
+
+[[bench]]
+name = "day6"
+harness = false
+path = "src/bin/day6/bench.rs"
