--- a/Cargo.toml
+++ b/Cargo.toml
@@ -79,3 +79,13 @@ test = true
 name = "day6"
 harness = false
 path = "src/bin/day6/bench.rs"
+
+[[bin]]
+name = "day7"
+bench = false
+test = true
+
+[[bench]]
+name = "day7"
+harness = false
+path = "src/bin/day7/bench.rs"
